src/compiletest/tcell-12.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
   --> $DIR/tcell-12.rs:15:5
    |
15  |     std::thread::spawn(|| owner.ro(&cell).set(200));  // Compile fail
    |     ^^^^^^^^^^^^^^^^^^ `Cell<i32>` cannot be shared between threads safely
    |
   ::: $RUST/std/src/thread/mod.rs
    |
    |     F: Send + 'static,
    |        ---- required by this bound in `spawn`
    |
    = help: the trait `Sync` is not implemented for `Cell<i32>`
    = note: required because of the requirements on the impl of `Sync` for `TCell<Marker, Cell<i32>>`
    = note: required because of the requirements on the impl of `Send` for `&TCell<Marker, Cell<i32>>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/tcell-12.rs:15:24: 15:51]`
